Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \newcommand{\pd}{\partial}
 
-\title{Non-dimensional Setup for Schrodinger-Poisson system}
+\title{Non-dimensional 1D Schrodinger-Poisson system}
 \author{Boris Zupancic}
 \date{June 2022}
 
