--- a/1D_SPsystem.tex
+++ b/1D_SPsystem.tex
@@ -1,13 +1,19 @@
-\documentclass{article}
+\documentclass{book}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{siunitx}
 \usepackage{color}
 \usepackage{amsfonts}
+
+\usepackage{hyperref}
+
 \usepackage{cleveref}
 \crefformat{section}{\S#2#1#3} % see manual of cleveref, section 8.2.1
 \crefformat{subsection}{\S#2#1#3}
 \crefformat{subsubsection}{\S#2#1#3}
+
+
+\usepackage{enumitem}
 
 \newcommand{\pd}{\partial}
 
@@ -19,9 +25,11 @@
 
 \maketitle
 
+\tableofcontents
 %---------------------------------------------------------------------------------
-% SECTION 1: THE SYSTEM
-\section{The System}
+% CHAPTER 1: THE SYSTEM
+
+\chapter{The System}
 
 The system is comprised of a Fuzzy Dark Matter (FDM) component, as well as a set of particles, both confined to a 1D box. The FDM and particles share the same gravitational potential, defined by their combined density $rho$ and Poisson's equation: 
 \begin{equation*}
@@ -30,7 +38,7 @@ The system is comprised of a Fuzzy Dark Matter (FDM) component, as well as a set
 
 The equations of motion (EOM) for FDM and the particles both rely on $\Phi$, but are different, as seen below. Our goal is to numerically integrate these equations of motion in a fully self-consistent manner.
 
-\subsection{Fuzzy Dark Matter (FDM)}
+\section{Fuzzy Dark Matter (FDM)}
 The EOM for FDM in a periodic box is the Schrodinger-Poisson (SP) system :
 \begin{equation}
     \begin{cases}
@@ -76,7 +84,7 @@ and finally substituting (\ref{Substitutions}) along with $r$ into Eq(\ref{SP}),
     \label{SP-NonDim}
 \end{equation}
 
-\subsection{Particles}
+\section{Particles}
 In the particle scenario, the equation of motion is the familiar form of Newton's second law, where for a single particle with position $x$ and mass $m$ in a gravitational potential $U = m\Phi$:
 $$\frac{d^2 x}{d t^2} = -\nabla\Phi = -\frac{\pd}{\pd x}\Phi(x,t)$$
 Substituting the same dimensionless parameters (\ref{Substitutions}) as in the wave scenario:
@@ -90,7 +98,7 @@ The gravitational potential is again given by Poisson's equation, and the partic
 
 where $n$ is the volumetric/surface/linear number density and $m_{\text{part}}$ is the particle mass. We specify how to non-dimensionlize the particle density further down below in \cref{Poisson's Equation for Particles}, when we address the numerical schemes.
     
-\subsection{Together}
+\section{Together}
 Combining the above information, the dimensionless FDM + Particle system looks like:
 \begin{equation}
     \begin{cases}
@@ -106,9 +114,9 @@ Combining the above information, the dimensionless FDM + Particle system looks l
 where we take ${\varrho}$ as specifying the total density dimensionless density, given by the addition of FDM density and Particle density.
 %------------------------------------------------------------------------------
 % SECTION 2: NUMERICAL SCHEMES
-\section{1D Numerical Schemes}
+\chapter{1D Numerical Schemes}
 
-\subsection{Initial Setup}
+\section{Initial Setup}
 The system is setup on a grid of $N$ linearly spaced points:
 $$z = [z_0, z_1, z_2, ..., z_{N-1}]$$
 (indexing starts with \texttt{i = 0} in Python3). These values will serve as edges for histogramming positions of particles, and positions at which the density, potential and acceleration fields are defined. The width of the bins is the constant
@@ -126,7 +134,7 @@ In any given simulation, we further define the box width $L$, and apply the boun
 
 %\subsubsection{Particles}
 
-\subsubsection{Initial Conditions}
+\subsection{Initial Conditions}
 Our goal is to now setup an initial distribution of FDM and/or particles.
 
 To create these initial conditions, a collection of particles is generated from a random gaussian distribution centered at 
@@ -135,7 +143,7 @@ Each particle is given an initial velocity of zero: $v = 0$.
 
 %\subsection{Calculating Physical Quantities}
 
-\subsection{Calculating Density}
+\section{Calculating Density}
 At any given time step of a simulation, it is necessary to calculate the acceleration field defined on the grid. To do this, density must be calculated first. It is straightforward to calculate the FDM density: $\varrho_\text{\tiny{FDM}} = m_\text{\tiny{FDM}}|\chi|^2$. Calculating particle density amounts to histogramming the positions of particles.
 
 Following Equation (\ref{Particle density}), in our numerical scheme, the particle density in a given bin of length $d L_\text{box}$ will be:
@@ -156,7 +164,7 @@ To retrieve a non-dimensional measure for density, we must consider again our sc
 where $\sigma$ is a newly defined non-dimensional analogue for the mass (per unit area) of each particle. Substitution of these values into (\ref{Numerical Particle Density}) yields a newly defined (non-dim.) density:
 $$\varrho_k \equiv \frac{L_s^3}{M_s} \rho_k = \frac{N_k}{dz}\sigma$$
 
-\subsubsection{Poisson's Equation for Particles}\label{Poisson's Equation for Particles}
+\subsection{Poisson's Equation for Particles}\label{Poisson's Equation for Particles}
 Now that we have covered how dimensionless particle density is calculated, we can non-dimensionalize the corresponding Poisson's Equation. In the dimensional case, Poisson's equation in a periodic box always looks like:
 \begin{equation*}
     \nabla_x^2 \Phi = 4\pi G (\rho - \langle \rho \rangle) 
@@ -171,7 +179,7 @@ Which reduces to
     \frac{\pd^2 \varphi}{\pd z^2} = 4\pi \left( \frac{n_k}{\Delta z}\cdot \sigma - \left\langle \frac{n_k}{\Delta z}\cdot \sigma \right\rangle\right)
 \end{equation}
 
-\subsection{Calculating Potential}
+\section{Calculating Potential}
 The second main ingredient in evolving the system is knowing the gravitational potential $\Phi$, or in the dimensionless case, $\varphi$. We must solve for $\varphi$ from Poisson's Equation corresponding to FDM+Particles, seen in Eq(5), and we do so using a Fast-Fourier-Transform (FFT) method. The basic idea is that applying the Discrete-Discrete Fourier Transform (since we're in a periodic box with a discrete signal/sequence) on Poisson's equation yields:
 \begin{equation*}
     \frac{\pd^2}{\pd z^2}\left(\sum_{n=0}^{N-1} \hat{\varphi}(k_n) e^{i k_n z}\right) = 4 \pi \left(\sum_{n=0}^{N-1} \hat{\varrho}(k_n) e^{i k_n z} - \langle\varrho\rangle\right)
@@ -192,12 +200,12 @@ yielding Poisson's equation fully solvable on our 1D mesh by simply applying an 
     \end{cases}
 \end{equation*}
 
-\subsection{Time Evolution}
+\section{Time Evolution}
 
 The final ingredient in running a fully self-consistent simulation is evolving both the FDM and Particles with the same time-differencing scheme. We use a kick-drift-kick algorithm. Each step in the kick-drift-kick is performed at the same time for FDM and Particles (Kick FDM+Particles, then Drift FDM+Particles, etc.).
 
 
-\subsubsection{FDM}
+\subsection{FDM}
 For the FDM, we employ a kick-drift-kick algorithm following \cite{Edwards_2018}, \cite{May&Springel_2021}, to solve Eq(\ref{SP-NonDim}):
 \begin{align}
     \chi(\tau+\Delta \tau,z) & = \left[\mathcal{T} \circ e^{-i \int_\tau^{\tau+\Delta\tau} \left(-r \pd_z^2 + \frac{1}{2r}\varphi(\tau,z)\right) } \right]\cdot \chi(\tau,z) \\
@@ -213,7 +221,7 @@ The "kick-drift-kick" steps are identified as:
 \end{align*}
 
 The "Update Potential" here (and below) means to recalculate the densities $\varrho_\text{\tiny{FDM}}$ and $\varrho_\text{part}$, and then solve Poisson's equation before continuing onto KICK 2.
-\subsubsection{Particles} To evolve the particle system, we again employ a "kick-drift-kick" algorithm based off of that used for the FDM. We solve the particle EOM from Eqs(\ref{FULL-NonDim}), for an individual particle:
+\subsection{Particles} To evolve the particle system, we again employ a "kick-drift-kick" algorithm based off of that used for the FDM. We solve the particle EOM from Eqs(\ref{FULL-NonDim}), for an individual particle:
 \begin{align*}
 &\text{KICK 1: } v({\tau+\Delta\tau/2}) = v(\tau) + \frac{\Delta\tau}{2}a(\tau)\\
 &\text{DRIFT: } z({\tau+\Delta\tau})+ \Delta\tau v({\tau+\Delta\tau/2})\\
@@ -223,11 +231,57 @@ The "Update Potential" here (and below) means to recalculate the densities $\var
 
 %-------------------------------------------------------------
 % SECTION 3: SIMULATIONS
-\section{Simulations}
+\chapter{Simulations}
+So far, the numerical schemes outlined above have been coded in Python3, and a repo is available on GitHub \footnote{\hyperlink{https://github.com/BorisZupancic/FDM_n_Bodies}{BorisZupancic/FDM\_n\_Bodies} on GitHub.}.
 
+In the program, the dimensional scales, as well as $G$,$\hbar$ and the total Mass $M$, are all set to unity,:
+\begin{equation*}
+    \begin{cases} L_s = 1\\ v_s = 1\\ \end{cases}\Rightarrow \begin{cases}T_s = 1\\ M_s = 1\end{cases} 
+\end{equation*}
+\begin{equation*}
+    \begin{cases}
+        G = 1\\
+        \hbar = 1\\
+        M = 1\\
+    \end{cases}
+\end{equation*}
+    
+Though not previously defined, the total mass of the FDM + Particle system is 
+\begin{equation}
+    M \equiv M_\text{\tiny{FDM}} + M_\text{part} \\
+\end{equation}
+where
+\begin{align}
+    M_\text{\tiny{FDM}} \equiv \int_{-L/2}^{L/2} \rho_\text{\tiny{FDM}} dz & &\text{and}& &
+    M_\text{part} \equiv \int_{-L/2}^{L/2} \rho_\text{\tiny{part}} dz
+\end{align}
+
+We further define a new expression for the fuzziness parameter $r$ by rearranging:
+\begin{equation}
+    r \equiv \frac{\hbar}{2m_\text{\tiny{FDM}} v_s L_s} = \frac{1}{4\pi}\frac{h}{m_\text{\tiny{FDM}}\sigma_\text{\tiny{FDM}}} \frac{\sigma_\text{\tiny{FDM}}}{v_s}
+\end{equation}
+
+Simulations take in as input:
+\begin{itemize}
+    \item Box Length: L
+    \item Percentage of total mass occupied by FDM.
+    \item     
+\end{itemize}
 %-------------------------------------------------------------
 % Section 4: ANALYSIS
-\section{Analysis + Diagnostics}
+\chapter{Analysis and Diagnostics}
+
+
+%------------------------------------------
+% APPENDIX
+\appendix
+\chapter{Spitzer Distribution}
+
+\chapter{1D Virial Theorem}
+
+\chapter{Kick-Drift-Kick is Symplectic}
+
+
 %-----------------------------------------
 % BIBLIOGRAPHY
 \bibliographystyle{plain} % We choose the "plain" reference style
